fix alignment of button

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -33,6 +33,6 @@ button {
   background: white;
   border: 1px solid #eee;
   padding: 8px;
-  margin: 0px;
+  margin: 0px auto;
   display: block;
 }
